[package]
name = "WooX_Introductory"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
